--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,18 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:name="com.example.fragmentapp.Fragm1"
+    android:background="@drawable/fonmain"
+    android:theme="@android:style/Theme.Black.NoTitleBar"
     tools:context=".MainActivity">
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="815dp"
-        android:layout_height="903dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.447"
-        app:srcCompat="@drawable/fonmain" />
 
     <Button
         android:id="@+id/bibl"
@@ -46,8 +38,8 @@
         android:id="@+id/textView5"
         android:layout_width="251dp"
         android:layout_height="63dp"
-        android:layout_marginStart="75dp"
-        android:layout_marginTop="199dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="216dp"
         android:gravity="center"
         android:text="Это начальная версия приложения. В будущем оно будет отличаться."
         android:textColor="#D8CDCD"
