--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@android:style/Theme.Black.NoTitleBar"
     tools:context=".Fragm1">
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="675dp"
-        android:layout_height="920dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
         android:src="@drawable/fonmain"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,7 +35,7 @@
         android:layout_width="337dp"
         android:layout_height="71dp"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="212dp"
         android:gravity="center"
         android:text="Простите, в данный момент эта функция недоступна"
         android:textColor="#D8CDCD"
