--- a/app/src/main/res/layout/task2.xml
+++ b/app/src/main/res/layout/task2.xml
@@ -3,15 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/task2"
+    android:background="@drawable/fon_task"
+    android:theme="@android:style/Theme.Black.NoTitleBar"
     android:layout_height="match_parent">
-
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/fon_task" />
 
     <TextView
         android:id="@+id/textView8"
