--- a/app/src/main/res/layout/tasks.xml
+++ b/app/src/main/res/layout/tasks.xml
@@ -2,16 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/task"
+    android:theme="@android:style/Theme.Black.NoTitleBar"
     android:layout_width="match_parent"
+    android:background="@drawable/fon_task"
     android:layout_height="match_parent">
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/fon_task" />
 
     <TextView
         android:id="@+id/textView11"
@@ -32,9 +27,9 @@
         android:layout_marginTop="406dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Введите ответ"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
         android:id="@+id/Next"
